Consul autoregistration and healthchecks